corrigindo erros de composicao de transformacao