@@ -1,6 +1,7 @@
 package project_cg.inputsPanel.transformations2dinputs;
 
 import project_cg.geometry.figures.BaseFigure;
+import project_cg.geometry.figures.Square;
 import project_cg.geometry.planeCartesians.cartesiansPlane.cartesianWithViewport.QueuedTransformationsPlane;
 import project_cg.transformations2d.Translation;
 import utils.ShapePanel;
@@ -38,26 +39,31 @@ public class TranslationInputs extends ShapePanel {
             int ty = Integer.parseInt(translationY.getText().trim());
 
             MainScreen mainScreen = MainScreenSingleton.getMainScreen();
-            BaseFigure figure = getSingleTransformationFigure(mainScreen);
+            Square square = getSingleTransformationSquare(mainScreen);
 
-            if (figure == null) {
+            if (square == null) {
                 JOptionPane.showMessageDialog(this, "Desenhe o quadrado de referencia antes de adicionar a translacao.");
                 return;
             }
 
             QueuedTransformationsPlane plane = (QueuedTransformationsPlane) mainScreen.JPanelHandler.getPanelByCategory("Transformações");
-            plane.queueTransformation(figure.getID(), point -> Translation.translatePoint(point, tx, ty));
+            plane.queueTransformation(Translation.getMatrixTranslation(tx, ty));
         } catch (NumberFormatException ex) {
             JOptionPane.showMessageDialog(this, "Digite valores inteiros validos para translacao X e Y.");
         }
     }
 
-    private BaseFigure getSingleTransformationFigure(MainScreen mainScreen) {
-        if (mainScreen.geometricFiguresHandler.getFigures().isEmpty()) {
+    private Square getSingleTransformationSquare(MainScreen mainScreen) {
+        if (mainScreen.geometricFiguresHandler.getFigures().size() != 1) {
             return null;
         }
 
-        return mainScreen.geometricFiguresHandler.getFigures().get(0);
+        BaseFigure figure = mainScreen.geometricFiguresHandler.getFigures().getFirst();
+        if (!(figure instanceof Square)) {
+            return null;
+        }
+
+        return (Square) figure;
     }
 
 }
